unpackaged/main/default/objects/Sales_Region_Code_Junction__c/Sales_Region_Code_Junction__c.object-meta.xml
<CustomObject>
    <label>Sales Region - Code Junction</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Sales Region - Code Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Region - Code Junction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>