unpackaged/main/default/objects/Sales_Region_Code_Junction__c/fields/DataloaderID__c.field-meta.xml
<CustomField>
    <fullName>DataloaderID__c</fullName>
    <description>18 Digit ID for Dataloader</description>
    <formula>CASESAFEID(Id)</formula>
    <label>DataloaderID</label>
    <type>Text</type>
</CustomField>