unpackaged/main/default/objects/Sales_Region_Code_Junction__c/fields/Sales_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Code__c</fullName>
    <inlineHelpText>This can be a Zip/Postal Code or even the name of a City</inlineHelpText>
    <label>Sales Region Code</label>
    <referenceTo>Sales_Region_Code__c</referenceTo>
    <relationshipLabel>Sales Region - Code Junction</relationshipLabel>
    <relationshipName>Sales_Region_Zip_Code_Junction</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>