unpackaged/main/default/objects/Sales_Region_Code_Junction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Sales_Region_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region_Code__c</field>
        <operation>startsWith</operation>
        <value>29</value>
    </filters>
    <label>All</label>
</ListView>