unpackaged/main/default/objects/Sales_Region_Code_Junction__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Sales_Region_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region_Code__c</field>
        <operation>contains</operation>
        <value>E</value>
    </filters>
    <label>All</label>
</ListView>